# gpts

./: .gitignore  Makefile  README.md  pyproject.toml
files/: example.txt
files/addresses/: address-0.txt  address-1.txt  address-2.txt  address-3.txt  address-4.txt  address-5.txt  address-6.txt  address-7.txt  address-8.txt  address-9.txt
src/gpts/: llms.py  models.py
tests/: eval_gpts.py  test_gpts.py  test_gpts_coarse.py  test_gpts_fine.py  test_llms.py  test_query.py
