[project]
name = "gpts"
version = "0.0.4"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
    { name="Ramya Kottapalli", email="rskottap@gmail.com" },
]
description = "Unix language driver for software 2.0"
dependencies = [
    "llama-cpp-python",
]

[project.optional-dependencies]
develop = [
    "build",
    "pytest",
]

[project.urls]
source = "https://github.com/notarealdeveloper/gpts"
download = "https://pypi.org/project/gpts/#files"
